--- a/whc_template/classic/_wh/wh.css
+++ b/whc_template/classic/_wh/wh.css
@@ -56,7 +56,7 @@
 }
 /* Common wh.css ========================================================== */
 /*
- * Copyright (c) 2017 XMLmind Software. All rights reserved.
+ * Copyright (c) 2017-2019 XMLmind Software. All rights reserved.
  *
  * This file is part of the XMLmind Web Help Compiler project.
  * For conditions of distribution and use, see the accompanying LEGAL.txt file.
@@ -89,9 +89,9 @@ body {
     overflow: hidden;
 
     /*
-     * Needed to prevent layout flickering during whInitPage/whLayout.
+     * Needed to prevent layout flickering (FOUC) during whInitPage/whLayout.
      */
-    visiblity: hidden;
+    visibility: hidden;
     opacity: 0;
 }
 
